# rsfc

./: .gitignore  CITATION.cff  Dockerfile  README.md  RSFC_REPORT.md  citation_example.cff  codemeta.json  pyproject.toml  requirements copy.txt  requirements.txt  run_rsfc.sh
.github/workflows/: pypi-publish.yml  run-rsfc.yml  use-rsfc.yml
doc/: about.html  catalog.html  index.html
doc/benchmark/FAIR4RS/: FAIR4RS.html  FAIR4RS.jsonld  FAIR4RS.ttl
doc/benchmark/software_benchmark/: software_benchmark.html  software_benchmark.jsonld  software_benchmark.ttl
doc/metric/FRSM-01/: FRSM-01.html  FRSM-01.jsonld  FRSM-01.ttl
doc/metric/FRSM-02/: FRSM-02.jsonld  FRSM-02.ttl
doc/metric/FRSM-03/: FRSM-03.html  FRSM-03.jsonld  FRSM-03.ttl
doc/metric/FRSM-04/: FRSM-04.html  FRSM-04.jsonld  FRSM-04.ttl
doc/metric/FRSM-05/: FRSM-05.html  FRSM-05.jsonld  FRSM-05.ttl
doc/metric/FRSM-06/: FRSM-06.html  FRSM-06.jsonld  FRSM-06.ttl
doc/metric/FRSM-07/: FRSM-07.html  FRSM-07.jsonld  FRSM-07.ttl
doc/metric/FRSM-08/: FRSM-08.html  FRSM-08.jsonld  FRSM-08.ttl
doc/metric/FRSM-09/: FRSM-09.html  FRSM-09.jsonld  FRSM-09.ttl
doc/metric/FRSM-12/: FRSM-12.html  FRSM-12.jsonld  FRSM-12.ttl
doc/metric/FRSM-13/: FRSM-13.html  FRSM-13.jsonld  FRSM-13.ttl
doc/metric/FRSM-14/: FRSM-14.html  FRSM-14.jsonld  FRSM-14.ttl
doc/metric/FRSM-15/: FRSM-15.html  FRSM-15.jsonld  FRSM-15.ttl
doc/metric/FRSM-16/: FRSM-16.html  FRSM-16.jsonld  FRSM-16.ttl
doc/metric/FRSM-17/: FRSM-17.html  FRSM-17.jsonld  FRSM-17.ttl
doc/test/RSFC-01-1/: RSFC-01-1.html  RSFC-01-1.jsonld  RSFC-01-1.ttl
doc/test/RSFC-01-2/: RSFC-01-2.html  RSFC-01-2.jsonld  RSFC-01-2.ttl
doc/test/RSFC-01-3/: RSFC-01-3.html  RSFC-01-3.jsonld  RSFC-01-3.ttl
doc/test/RSFC-03-1/: RSFC-03-1.html  (+2 more)
doc/web_generation_scripts/: config.ini  test_register.py  ttl_transformations.py
src/rsfc/: __init__.py  main.py  rsfc_core.py
src/rsqc/: main.py  rsqc.py  rsqc_core.py
templates/: assessment_schema.json.j2
(+143 files in other folders)
