[project]
name = "rsfc"
version = "0.0.1"
description = "EVERSE Research Software Fairness Checks"
authors = [
    { name="Andres Montero", email="andres.montero.martin@upm.es" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "somef",
    "regex",
    "requests"
]

[project.urls]
Homepage = "https://github.com/andriumon/rsqc"

[project.scripts]
rsfc = "rsfc.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rsfc = ["templates/*.j2"]

